# skillsmd

./: LICENCE  README.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml  publish.yml
src/skillsmd/: add.py  cli.py  find.py  init.py  installer.py  list_cmd.py  skill_lock.py  source_parser.py
src/skillsmd/providers/: __init__.py  base.py  huggingface.py  mintlify.py  wellknown.py
tests/: smoke_test.py  test_cli.py  test_cross_platform_paths.py  test_full_depth_discovery.py  test_installer_symlink.py  test_list_installed.py  test_providers.py  test_sanitize_name.py  test_skill_matching.py  test_source_parser.py
